[BE] fix: 멤버 조회 수정, 모의고사 문제 하나 조회시 시간 값 추가